Added "Add" and Edit functionality

--- a/AppToGo/Base.lproj/Main.storyboard
+++ b/AppToGo/Base.lproj/Main.storyboard
@@ -151,11 +151,47 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <segue destination="031-Ud-bMh" kind="show" identifier="showEditMode" id="Z00-t3-yK6"/>
+                        <segue destination="ayp-Ml-P2Z" kind="show" identifier="goAdd" id="GbI-P9-QtX"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VhO-Rg-MU6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3137.68115942029" y="140.625"/>
+        </scene>
+        <!--Add View Controller-->
+        <scene sceneID="12I-63-Zas">
+            <objects>
+                <viewController id="ayp-Ml-P2Z" customClass="AddViewController" customModule="AppToGo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gbQ-OS-oLm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XQI-EZ-ug1">
+                                <rect key="frame" x="58" y="133" width="324" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0WJ-2Q-5Vf">
+                                <rect key="frame" x="205" y="273" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="finalizeAddTask:" destination="ayp-Ml-P2Z" eventType="touchUpInside" id="aO0-pa-Vk7"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="e7J-47-xGh"/>
+                    </view>
+                    <connections>
+                        <outlet property="newItemText" destination="XQI-EZ-ug1" id="VmU-mN-In1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xvF-Pn-4Fy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4334.7826086956529" y="-525"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="V8v-fd-sJ3">
